syntax = "proto3";
option go_package = "GoProxyServer/protos/helloworld";
package helloworld;

// define service
service GreetingService {
    // define methods of which the service has
	rpc Hello (HelloRequest) returns (HelloResponse); 
	rpc DownstreamHello (HelloRequest) returns (stream HelloResponse);
}

// define type
message HelloRequest {
	string version = 1;
	string uuid = 2;
	string cmd = 3;
	string content = 4;
}

message HelloResponse {
	string uuid = 1;
	string message = 2;
}